Add darkstat always

--- a/roles/network/templates/vpnbox.sh.j2
+++ b/roles/network/templates/vpnbox.sh.j2
@@ -168,6 +168,7 @@ EoF
           _ovpn_extract_config
           _ovpn_connect
           _ovpn_get_cc
+          _ovpn_darkstat
           _ovpn_system_config
           _ovpn_info
       ;;
