Add support for open wifi networks

--- a/roles/network/templates/routerino.yaml.j2
+++ b/roles/network/templates/routerino.yaml.j2
@@ -20,6 +20,10 @@ network:
       optional: true
       access-points:
 {% for wifientry in wifi_passwords %}
+{% if wifientry.password != "" %}
         "{{ wifientry.ssid }}":
           password: "{{ wifientry.password }}"
+{% else %}
+        "{{ wifientry.ssid }}": {}
+{% endif %}
 {% endfor %}
